2008-07-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Conditionalize `pg_encoding_to_char' decl; make its retval `const'.

	Reported by Hans Ruschinski <hans.ruschinski@gmail.com>.

	* configure.in (pg_encoding_to_char): New AC_CHECK_DECLS.
	* libpostgres.c (pg_encoding_to_char): Add `const' to retval
	of this decl; surround w/ `#if !HAVE_DECL_PG_ENCODING_TO_CHAR'.

2008-05-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.37 (tag v0.37)

	* configure.in (AC_INIT): Bump version to "0.37" for release.

2008-05-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Look for PostgreSQL headers/libs under $prefix by default.

	* build-aux/guile-pg.m4 (PQ_FLAGS): Look under $prefix/include
	and $prefix/lib for PostgreSQL headers and libs, respectively.

2008-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use GNU Automake 1.10.1 facilities.

	* scm/Makefile.am (AUTOMAKE_OPTIONS): Delete var.
	(guile_postgres_sources, d_DATA, ETAGS_ARGS, EXTRA_DIST): Likewise.
	(dist_d_DATA): New var.
	(install-data-hook): Rewrite target.
	* doc/Makefile.am (.twerp.texi): Use $(GUILE_TOOLS).
	* Makefile.am (.module-catalog): Use $(GUILE_TOOLS).
	(.c.doc, .scm.doc, install-data-hook, .doc-index): Likewise.
	* configure.in (AM_INIT_AUTOMAKE): Use one-arg form.
	* autogen.sh: Simplify invocation of doc/.make-automake-frags.
	Call automake with option `-Wall'.

2008-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Remove doc-coverage support.

	* doc/cov: Delete file.
	* doc/Makefile.am (EXTRA_DIST): Remove cov.
	(dist-hook): Delete target.

2008-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add handling for #:finish to pgtable-manager (and -worker) closure.

	* scm/postgres-table.scm: From module (database postgres),
	also select `pg-finish'.
	(pgtable-manager): Handle #:finish; add @findex entries.

2008-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make the result object drop reference to the connection, if dead.

	* libpostgres.c (xr_mark): If the connection object's